mux-compiler/tests/snapshots/executable_integration__executable_integration__error_auto_list_empty.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Cannot infer type for expression containing empty set/map literal
--> test_scripts/error_cases/error_auto_list_empty.mux:3:14
   |
 3 |     auto z = [{}]
   |              ^
   |
= help: Use explicit type annotations for all empty collection literals.
